<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GearFitWallet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Gear Fit Wallet</string>
    <string name="card_category">Card Type</string>
    <string name="card_title">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_separator">-</string>
    <string name="card_image">Card Image</string>
    <string name="card_image_change">Change Card Image</string>
    <string name="add">ADD</string>

</resources>
